refactor(backend): extract product spec/stats building into dedicated services
Introduce ProductSpecificationBuilder and ProductStatsAggregator to take over
spec-building and stats-aggregation logic previously inline in catalog services;
update product entities/mapper and recommendation service accordingly.